[gd_scene load_steps=7 format=3 uid="uid://c2o1lsmd80cnp"]

[ext_resource type="Script" path="res://GameElements/CardsManager/CardsManager.gd" id="1_ctqjo"]
[ext_resource type="FontFile" uid="uid://da8dsj4hcjptk" path="res://Assets/SuperMilk-nRq9Y.ttf" id="2_gyvey"]
[ext_resource type="Texture2D" uid="uid://bdgxpsmcj1sfs" path="res://Assets/Cards/card_1.png" id="3_5lquo"]

[sub_resource type="Animation" id="Animation_qticw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CardsManager/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CardsManager/VBoxContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 1080)]
}

[sub_resource type="Animation" id="Animation_v8ruh"]
resource_name = "show_cards"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CardsManager/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.4, 1.3),
"transitions": PackedFloat32Array(0.15932, 0.15932),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CardsManager/VBoxContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.148651, 0.148651),
"update": 0,
"values": [Vector2(0, 1080), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xrpxs"]
_data = {
"RESET": SubResource("Animation_qticw"),
"show_cards": SubResource("Animation_v8ruh")
}

[node name="CardsManager" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_ctqjo")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.203922, 0.203922, 0.203922, 0.862745)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1080.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 64
theme_override_constants/margin_bottom = 64

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_gyvey")
theme_override_font_sizes/font_size = 64
text = "Select an upgrade !"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="choice_1" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("3_5lquo")

[node name="choice_2" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("3_5lquo")

[node name="choice_3" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("3_5lquo")

[node name="CardTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="CardsManagerAnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
process_mode = 3
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_xrpxs")
}

[connection signal="pressed" from="VBoxContainer/HBoxContainer/choice_1" to="." method="_on_choice_1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/choice_2" to="." method="_on_choice_2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/choice_3" to="." method="_on_choice_3_pressed"]
[connection signal="timeout" from="CardTimer" to="." method="_on_card_timer_timeout"]
